--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,6 +10,8 @@ services:
     image: bitnami/kafka:3.3.1
     ports:
       - "9092:9092"
+    volumes:
+      - ./docker/data/kafka:/bitnami/kafka
     environment:
       KAFKA_CFG_ZOOKEEPER_CONNECT: zookeeper:2181
       ALLOW_PLAINTEXT_LISTENER: "yes"
@@ -24,3 +26,14 @@ services:
       KAFKA_INTER_BROKER_LISTENER_NAME: "INTERNAL"
     depends_on:
       - zookeeper
+  schema-registry:
+    image: bitnami/schema-registry:latest
+    hostname: schema-registry
+    ports:
+      - "8081:8081"
+    environment:
+      - SCHEMA_REGISTRY_HOST_NAME='schema-registry'
+      - SCHEMA_REGISTRY_LISTENERS=http://0.0.0.0:8081
+      - SCHEMA_REGISTRY_KAFKA_BROKERS=PLAINTEXT://kafka:29092
+    depends_on:
+      - kafka
